fixed header logo image to not stretch when viewed in Safari

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body{
 .logo {
     display:flex;gap:16px; margin-left:15%;
 }
+.logo img {max-height: 100px;}
 
 .title{
     display:flex;align-items: center;
@@ -26,7 +27,7 @@ body{
 }
 
 .header{
-    justify-content: space-between;
+    justify-content: space-between;align-items: center;
 }
 
 .footer{
